language/move-prover/spec-lang/tests/sources/pragmas_err.exp
error: property `bar` is not valid in this context

   ┌── tests/sources/pragmas_err.move:7:9 ───
   │
 7 │         pragma bar = true;
   │         ^^^^^^^^^^^^^^^^^^
   │
